@@ -5,12 +5,13 @@ import com.mojang.blaze3d.systems.RenderSystem;
 import mezz.jei.api.gui.IRecipeLayoutDrawable;
 import mezz.jei.api.gui.inputs.IJeiInputHandler;
 import mezz.jei.api.gui.inputs.RecipeSlotUnderMouse;
-import mezz.jei.common.util.ImmutableRect2i;
 import mezz.jei.api.recipe.RecipeIngredientRole;
-import mezz.jei.gui.input.ClickableIngredientInternal;
-import mezz.jei.gui.input.IClickableIngredientInternal;
+import mezz.jei.common.util.ErrorUtil;
+import mezz.jei.common.util.ImmutableRect2i;
 import mezz.jei.gui.input.FocusedRecipe;
 import mezz.jei.gui.input.FocusedRecipeCandidate;
+import mezz.jei.gui.input.ClickableIngredientInternal;
+import mezz.jei.gui.input.IClickableIngredientInternal;
 import mezz.jei.gui.input.IUserInputHandler;
 import mezz.jei.gui.input.UserInput;
 import mezz.jei.gui.input.handlers.CombinedInputHandler;
@@ -25,15 +26,20 @@ import net.minecraft.client.renderer.Rect2i;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.inventory.AbstractContainerMenu;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.function.Consumer;
 import java.util.stream.Stream;
 
 public class RecipeGuiLayouts {
-	private final List<RecipeLayoutWithButtons<?>> recipeLayoutsWithButtons = new ArrayList<>();
+	private static final Logger LOGGER = LogManager.getLogger();
+
+	private final List<IRecipeLayoutWithButtons<?>> recipeLayoutsWithButtons = new ArrayList<>();
 	@Nullable
 	private IUserInputHandler cachedInputHandler;
 
@@ -45,8 +51,8 @@ public class RecipeGuiLayouts {
 		if (this.recipeLayoutsWithButtons.isEmpty()) {
 			return;
 		}
-		RecipeLayoutWithButtons<?> firstLayout = this.recipeLayoutsWithButtons.get(0);
-		ImmutableRect2i layoutAreaWithBorder = new ImmutableRect2i(firstLayout.recipeLayout().getRectWithBorder());
+		IRecipeLayoutWithButtons<?> firstLayout = this.recipeLayoutsWithButtons.getFirst();
+		ImmutableRect2i layoutAreaWithBorder = new ImmutableRect2i(firstLayout.getRecipeLayout().getRectWithBorder());
 		final int recipeXOffset = getRecipeXOffset(layoutAreaWithBorder, recipeLayoutsArea);
 
 		final int recipeHeight = layoutAreaWithBorder.getHeight();
@@ -56,62 +62,10 @@ public class RecipeGuiLayouts {
 
 		final int spacingY = recipeHeight + recipeSpacing;
 		int recipeYOffset = recipeLayoutsArea.getY() + recipeSpacing;
-		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
-			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.recipeLayout();
-			Rect2i rectWithBorder = recipeLayout.getRectWithBorder();
-			Rect2i rect = recipeLayout.getRect();
-			recipeLayout.setPosition(
-				recipeXOffset - rectWithBorder.getX() + rect.getX(),
-				recipeYOffset - rectWithBorder.getY() + rect.getY()
-			);
+		for (IRecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
+			recipeLayoutWithButtons.updateBounds(recipeXOffset, recipeYOffset);
 			recipeYOffset += spacingY;
 		}
-
-		updateRecipeButtonPositions();
-	}
-
-	private void updateRecipeButtonPositions() {
-		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
-			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.recipeLayout();
-			Rect2i layoutArea = recipeLayout.getRect();
-			Rect2i transferButtonArea = offset(recipeLayout.getRecipeTransferButtonArea(), layoutArea);
-			Rect2i bookmarkButtonArea = offset(recipeLayout.getRecipeBookmarkButtonArea(), layoutArea);
-
-			{
-				RecipeTransferButton button = recipeLayoutWithButtons.transferButton();
-				button.updateBounds(transferButtonArea);
-			}
-			{
-				RecipeBookmarkButton button = recipeLayoutWithButtons.bookmarkButton();
-				button.updateBounds(bookmarkButtonArea);
-			}
-			{
-				RecipeFavoriteButton button = recipeLayoutWithButtons.favoriteButton();
-				button.updateBounds(calculateRecipeFavoriteButtonArea(transferButtonArea, bookmarkButtonArea));
-			}
-		}
-	}
-
-	public static Rect2i calculateRecipeFavoriteButtonArea(Rect2i transferButtonArea, Rect2i bookmarkButtonArea) {
-		int bookmarkToTransferGap = Math.max(
-			0,
-			transferButtonArea.getY() - (bookmarkButtonArea.getY() + bookmarkButtonArea.getHeight())
-		);
-		return new Rect2i(
-			bookmarkButtonArea.getX(),
-			bookmarkButtonArea.getY() - bookmarkButtonArea.getHeight() - bookmarkToTransferGap,
-			bookmarkButtonArea.getWidth(),
-			bookmarkButtonArea.getHeight()
-		);
-	}
-
-	private static Rect2i offset(Rect2i area, Rect2i offset) {
-		return new Rect2i(
-			area.getX() + offset.getX(),
-			area.getY() + offset.getY(),
-			area.getWidth(),
-			area.getHeight()
-		);
 	}
 
 	private int getRecipeXOffset(ImmutableRect2i layoutRect, ImmutableRect2i layoutsArea) {
@@ -120,7 +74,7 @@ public class RecipeGuiLayouts {
 		}
 
 		final int recipeWidth = layoutRect.getWidth();
-		final int recipeWidthWithButtons = recipeLayoutsWithButtons.get(0).totalWidth();
+		final int recipeWidthWithButtons = recipeLayoutsWithButtons.getFirst().totalWidth();
 		final int buttonSpace = recipeWidthWithButtons - recipeWidth;
 
 		final int availableArea = layoutsArea.getWidth();
@@ -137,7 +91,7 @@ public class RecipeGuiLayouts {
 		return new ProxyInputHandler(() -> {
 			if (cachedInputHandler == null) {
 				List<IUserInputHandler> handlers = this.recipeLayoutsWithButtons.stream()
-					.map(RecipeLayoutWithButtons::createUserInputHandler)
+					.map(IRecipeLayoutWithButtons::createUserInputHandler)
 					.toList();
 				cachedInputHandler = new CombinedInputHandler("RecipeGuiLayouts", handlers);
 			}
@@ -145,17 +99,22 @@ public class RecipeGuiLayouts {
 		});
 	}
 
+	public void tick() {
+		safeCallOnRecipeLayouts(IRecipeLayoutWithButtons::tick);
+	}
+
 	public void tick(@Nullable AbstractContainerMenu parentContainer) {
 		Player player = Minecraft.getInstance().player;
-		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : this.recipeLayoutsWithButtons) {
-			recipeLayoutWithButtons.tick(parentContainer, player);
+		for (IRecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
+			if (recipeLayoutWithButtons instanceof RecipeLayoutWithButtons<?> recipeLayout) {
+				recipeLayout.tick(parentContainer, player);
+			} else {
+				recipeLayoutWithButtons.tick();
+			}
 		}
 	}
 
-	public void setRecipeLayoutsWithButtons(List<RecipeLayoutWithButtons<?>> recipeLayoutsWithButtons) {
-		if (!this.recipeLayoutsWithButtons.equals(recipeLayoutsWithButtons)) {
-			recipeLayoutsWithButtons.forEach(layout -> layout.inputSlotSelectionState().clear(layout.recipeLayout()));
-		}
+	public void setRecipeLayoutsWithButtons(List<IRecipeLayoutWithButtons<?>> recipeLayoutsWithButtons) {
 		this.recipeLayoutsWithButtons.clear();
 		this.recipeLayoutsWithButtons.addAll(recipeLayoutsWithButtons);
 		this.cachedInputHandler = null;
@@ -163,35 +122,26 @@ public class RecipeGuiLayouts {
 
 	public Stream<IClickableIngredientInternal<?>> getIngredientUnderMouse(double mouseX, double mouseY) {
 		return this.recipeLayoutsWithButtons.stream()
-			.map(RecipeLayoutWithButtons::recipeLayout)
+			.map(IRecipeLayoutWithButtons::getRecipeLayout)
 			.map(recipeLayout -> recipeLayout.getSlotUnderMouse(mouseX, mouseY))
 			.flatMap(Optional::stream)
 			.map(RecipeGuiLayouts::getClickedIngredient)
 			.flatMap(Optional::stream);
 	}
 
-	public Optional<FocusedRecipeCandidate> getFocusedRecipeCandidateUnderMouse(double mouseX, double mouseY) {
-		return this.recipeLayoutsWithButtons.stream()
-			.map(RecipeLayoutWithButtons::recipeLayout)
-			.filter(recipeLayout -> recipeLayout.isMouseOver(mouseX, mouseY))
-			.filter(recipeLayout -> isOutputSlotUnderMouse(recipeLayout, mouseX, mouseY))
-			.findFirst()
-			.flatMap(RecipeGuiLayouts::getFocusedRecipeCandidate);
+	public Optional<IRecipeLayoutWithButtons<?>> getRecipeLayoutUnderMouse(double mouseX, double mouseY) {
+		for (IRecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
+			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.getRecipeLayout();
+			if (recipeLayout.isMouseOver(mouseX, mouseY)) {
+				return Optional.of(recipeLayoutWithButtons);
+			}
+		}
+		return Optional.empty();
 	}
 
-	public Optional<FocusedRecipeCandidate> getRecipeTooltipCandidateUnderMouse(double mouseX, double mouseY) {
-		return this.recipeLayoutsWithButtons.stream()
-			.map(RecipeLayoutWithButtons::recipeLayout)
-			.filter(recipeLayout -> recipeLayout.isMouseOver(mouseX, mouseY))
-			.filter(recipeLayout -> !isOutputSlotUnderMouse(recipeLayout, mouseX, mouseY))
-			.filter(recipeLayout -> hasDisplayedSlotUnderMouse(recipeLayout, mouseX, mouseY))
-			.findFirst()
-			.flatMap(RecipeGuiLayouts::getFocusedRecipeCandidate);
-	}
-
-	public Optional<RecipeLayoutUnderMouse> getRecipeLayoutUnderMouse(double mouseX, double mouseY) {
-		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
-			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.recipeLayout();
+	public Optional<RecipeLayoutUnderMouse> getRecipeLayoutWithSlotUnderMouse(double mouseX, double mouseY) {
+		for (IRecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
+			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.getRecipeLayout();
 			if (!recipeLayout.isMouseOver(mouseX, mouseY)) {
 				continue;
 			}
@@ -202,6 +152,53 @@ public class RecipeGuiLayouts {
 			}
 		}
 		return Optional.empty();
+	}
+
+	public Optional<FocusedRecipeCandidate> getFocusedRecipeCandidateUnderMouse(double mouseX, double mouseY) {
+		return this.recipeLayoutsWithButtons.stream()
+			.map(IRecipeLayoutWithButtons::getRecipeLayout)
+			.filter(recipeLayout -> recipeLayout.isMouseOver(mouseX, mouseY))
+			.filter(recipeLayout -> isOutputSlotUnderMouse(recipeLayout, mouseX, mouseY))
+			.findFirst()
+			.flatMap(RecipeGuiLayouts::getFocusedRecipeCandidate);
+	}
+
+	public Optional<FocusedRecipeCandidate> getRecipeTooltipCandidateUnderMouse(double mouseX, double mouseY) {
+		return this.recipeLayoutsWithButtons.stream()
+			.map(IRecipeLayoutWithButtons::getRecipeLayout)
+			.filter(recipeLayout -> recipeLayout.isMouseOver(mouseX, mouseY))
+			.filter(recipeLayout -> !isOutputSlotUnderMouse(recipeLayout, mouseX, mouseY))
+			.filter(recipeLayout -> hasDisplayedSlotUnderMouse(recipeLayout, mouseX, mouseY))
+			.findFirst()
+			.flatMap(RecipeGuiLayouts::getFocusedRecipeCandidate);
+	}
+
+	public boolean bookmarkRecipeUnderMouse(UserInput input, boolean preserveAmount) {
+		double mouseX = input.getMouseX();
+		double mouseY = input.getMouseY();
+		for (IRecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
+			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.getRecipeLayout();
+			if (recipeLayout.isMouseOver(mouseX, mouseY) && isOutputSlotUnderMouse(recipeLayout, mouseX, mouseY)) {
+				if (recipeLayoutWithButtons instanceof RecipeLayoutWithButtons<?> recipeLayoutWithForkExtras) {
+					return recipeLayoutWithForkExtras.addRecipeBookmarkGroup(input, preserveAmount);
+				}
+				return false;
+			}
+		}
+		return false;
+	}
+
+	public static Rect2i calculateRecipeFavoriteButtonArea(Rect2i transferButtonArea, Rect2i bookmarkButtonArea) {
+		int bookmarkToTransferGap = Math.max(
+			0,
+			transferButtonArea.getY() - (bookmarkButtonArea.getY() + bookmarkButtonArea.getHeight())
+		);
+		return new Rect2i(
+			bookmarkButtonArea.getX(),
+			bookmarkButtonArea.getY() - bookmarkButtonArea.getHeight() - bookmarkToTransferGap,
+			bookmarkButtonArea.getWidth(),
+			bookmarkButtonArea.getHeight()
+		);
 	}
 
 	private static boolean isOutputSlotUnderMouse(IRecipeLayoutDrawable<?> recipeLayout, double mouseX, double mouseY) {
@@ -218,26 +215,6 @@ public class RecipeGuiLayouts {
 			.isPresent();
 	}
 
-	public boolean bookmarkRecipeUnderMouse(UserInput input, boolean preserveAmount) {
-		double mouseX = input.getMouseX();
-		double mouseY = input.getMouseY();
-		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
-			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.recipeLayout();
-			if (recipeLayout.isMouseOver(mouseX, mouseY) && isOutputSlotUnderMouse(recipeLayout, mouseX, mouseY)) {
-				return recipeLayoutWithButtons.bookmarkButton().addRecipeBookmarkGroup(input, preserveAmount);
-			}
-		}
-		return false;
-	}
-
-	private static Optional<IClickableIngredientInternal<?>> getClickedIngredient(RecipeSlotUnderMouse slotUnderMouse) {
-		return slotUnderMouse.slot().getDisplayedIngredient()
-			.map(displayedIngredient -> {
-				IElement<?> element = new IngredientElement<>(displayedIngredient);
-				return new ClickableIngredientInternal<>(element, slotUnderMouse::isMouseOver, false, true);
-			});
-	}
-
 	private static <R> Optional<FocusedRecipeCandidate> getFocusedRecipeCandidate(IRecipeLayoutDrawable<R> recipeLayout) {
 		R recipe = recipeLayout.getRecipe();
 		ResourceLocation recipeUid = recipeLayout.getRecipeCategory().getRegistryName(recipe);
@@ -248,9 +225,20 @@ public class RecipeGuiLayouts {
 		return Optional.of(FocusedRecipeCandidate.recipe(new FocusedRecipe(recipeTypeUid, recipeUid)));
 	}
 
+	public record RecipeLayoutUnderMouse(IRecipeLayoutDrawable<?> layout, RecipeSlotUnderMouse slotUnderMouse) {
+	}
+
+	private static Optional<IClickableIngredientInternal<?>> getClickedIngredient(RecipeSlotUnderMouse slotUnderMouse) {
+		return slotUnderMouse.slot().getDisplayedIngredient()
+			.map(displayedIngredient -> {
+				IElement<?> element = new IngredientElement<>(displayedIngredient);
+				return new ClickableIngredientInternal<>(element, slotUnderMouse::isMouseOver, false, true);
+			});
+	}
+
 	public boolean mouseDragged(double mouseX, double mouseY, InputConstants.Key input, double dragX, double dragY) {
-		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
-			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.recipeLayout();
+		for (IRecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
+			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.getRecipeLayout();
 			if (mouseDragged(recipeLayout, mouseX, mouseY, input, dragX, dragY)) {
 				return true;
 			}
@@ -267,8 +255,8 @@ public class RecipeGuiLayouts {
 	}
 
 	public void mouseMoved(double mouseX, double mouseY) {
-		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
-			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.recipeLayout();
+		for (IRecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
+			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.getRecipeLayout();
 			if (recipeLayout.isMouseOver(mouseX, mouseY)) {
 				IJeiInputHandler inputHandler = recipeLayout.getInputHandler();
 				inputHandler.handleMouseMoved(mouseX, mouseY);
@@ -283,42 +271,42 @@ public class RecipeGuiLayouts {
 		DeltaTracker deltaTracker = minecraft.getTimer();
 		float partialTicks = deltaTracker.getGameTimeDeltaPartialTick(false);
 
-		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
-			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.recipeLayout();
+		safeCallOnRecipeLayouts(r -> r.draw(guiGraphics, mouseX, mouseY, partialTicks));
+
+		for (IRecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
+			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.getRecipeLayout();
 			if (recipeLayout.isMouseOver(mouseX, mouseY)) {
 				hoveredLayout = recipeLayout;
+				break;
 			}
-			recipeLayout.drawRecipe(guiGraphics, mouseX, mouseY);
-
-			RecipeTransferButton transferButton = recipeLayoutWithButtons.transferButton();
-			transferButton.draw(guiGraphics, mouseX, mouseY, partialTicks);
-
-			RecipeFavoriteButton favoriteButton = recipeLayoutWithButtons.favoriteButton();
-			favoriteButton.draw(guiGraphics, mouseX, mouseY, partialTicks);
-
-			RecipeBookmarkButton bookmarkButton = recipeLayoutWithButtons.bookmarkButton();
-			bookmarkButton.draw(guiGraphics, mouseX, mouseY, partialTicks);
 		}
 		RenderSystem.disableBlend();
 		return Optional.ofNullable(hoveredLayout);
 	}
 
-	public void drawTooltips(GuiGraphics guiGraphics, int mouseX, int mouseY) {
-		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
-			recipeLayoutWithButtons.transferButton().drawTooltips(guiGraphics, mouseX, mouseY);
-			recipeLayoutWithButtons.favoriteButton().drawTooltips(guiGraphics, mouseX, mouseY);
-			recipeLayoutWithButtons.bookmarkButton().drawTooltips(guiGraphics, mouseX, mouseY);
+	private void safeCallOnRecipeLayouts(Consumer<IRecipeLayoutWithButtons<?>> consumer) {
+		for (int i = 0; i < recipeLayoutsWithButtons.size(); i++) {
+			IRecipeLayoutWithButtons<?> recipeLayoutWithButtons = recipeLayoutsWithButtons.get(i);
+			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.getRecipeLayout();
+			try {
+				consumer.accept(recipeLayoutWithButtons);
+			} catch (RuntimeException e) {
+				String recipeInfo = ErrorUtil.getRecipeInfo(recipeLayout);
+				LOGGER.error("Recipe crashed:\n{}", recipeInfo, e);
+				recipeLayoutsWithButtons.set(i, new RecipeLayoutWithButtonsErrored<>(recipeLayout));
+			}
 		}
+	}
+
+	public void drawTooltips(GuiGraphics guiGraphics, int mouseX, int mouseY) {
+		safeCallOnRecipeLayouts(r -> r.drawTooltips(guiGraphics, mouseX, mouseY));
 	}
 
 	public int getWidth() {
 		if (recipeLayoutsWithButtons.isEmpty()) {
 			return 0;
 		}
-		RecipeLayoutWithButtons<?> first = this.recipeLayoutsWithButtons.get(0);
+		IRecipeLayoutWithButtons<?> first = this.recipeLayoutsWithButtons.getFirst();
 		return first.totalWidth();
-	}
-
-	public record RecipeLayoutUnderMouse(IRecipeLayoutDrawable<?> layout, RecipeSlotUnderMouse slotUnderMouse) {
 	}
 }
